--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Fraud Detector 5000</title>
+    <title>Film Predictor 5000</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
