--- a/flask/templates/details.html
+++ b/flask/templates/details.html
@@ -71,16 +71,16 @@
           <h3>Directed by:</h3><h4>{{ data.director }}</h4>
           <h3>Starring:</h3>
           
-          <h5>{{ data.actor1 }} ( {{ data.actor1_class}} )</h5>
-          <h5>{{ data.actor2 }} ( {{ data.actor2_class}} )</h5>
-          <h5>{{ data.actor3 }} ( {{ data.actor3_class}} )</h5>
-          <h5>{{ data.actor4 }} ( {{ data.actor4_class}} )</h5>
-          <h5>{{ data.actor5 }} ( {{ data.actor5_class}} )</h5>
-          <h5>{{ data.actor6 }} ( {{ data.actor6_class}} )</h5>
-          <h5>{{ data.actor7 }} ( {{ data.actor7_class}} )</h5>
-          <h5>{{ data.actor8 }} ( {{ data.actor8_class}} )</h5>
-          <h5>{{ data.actor9 }} ( {{ data.actor9_class}} )</h5>
-          <h5>{{ data.actor10 }} ( {{ data.actor10_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor1_code}}' target="_blank" >{{ data.actor1 }} </a>( {{ data.actor1_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor2_code}}' target="_blank" >{{ data.actor2 }} </a>( {{ data.actor2_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor3_code}}' target="_blank" >{{ data.actor3 }} </a>( {{ data.actor3_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor4_code}}' target="_blank" >{{ data.actor4 }} </a>( {{ data.actor4_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor5_code}}' target="_blank" >{{ data.actor5 }} </a>( {{ data.actor5_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor6_code}}' target="_blank" >{{ data.actor6 }} </a>( {{ data.actor6_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor7_code}}' target="_blank" >{{ data.actor7 }} </a>( {{ data.actor7_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor8_code}}' target="_blank" >{{ data.actor8 }} </a>( {{ data.actor8_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor9_code}}' target="_blank" >{{ data.actor9 }} </a>( {{ data.actor9_class}} )</h5>
+          <h5><a href='http://IMDB.com{{data.actor10_code}}' target="_blank" >{{ data.actor10 }} </a>( {{ data.actor10_class}} )</h5>
           
           <h3>Budget:</h3>
           <h4>${{ data.budget }}</h4>
