--- a/flask/templates/details.html
+++ b/flask/templates/details.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Film Predictor 5000</title>
+    <title>Film Predicting Robot</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Film Predictor 5000</a>
+          <a class="navbar-brand" href="/">Film Predicting Robot</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -54,13 +54,12 @@
       <div class="starter-template">
         
         <div class="container">
-          <h1>Opening Box Office Film Revenue Predictor!</h1>
-          <br>
+          
           <form action="/details" method='POST'>
-            <button type="submit" >roll again</button>
+            <button type="submit" >Random Film</button>
           </form></br>
           <form action="/details?type=golden" method='POST'>
-            <button type="submit" name="golden">golden roll</button>
+            <button type="submit" name="golden">Random A-list Film</button>
           </form></br>
           
           <p class="lead">Your film is predicted to make:<br></p>
@@ -106,7 +105,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.4/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
