--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Film Predictor 5000</title>
+    <title>Film Predicting Robot</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Film Predictor 5000</a>
+          <a class="navbar-brand" href="/">Film Predicting Robot</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -56,17 +56,26 @@
         <p class="lead">Press the button to generate a random film.<br> See how much money your film is predicted to make.</p>
       </br>
         <form action="/details" method='POST' >
-          <input type="submit" name="make film" />
+          <button type="submit" name="make film">Random Film</button>
       </form>
+    </br>
+    <form action="/details?type=golden" method='POST' >
+      <button type="submit" name="make film">Random A-list Film</button>
+  </form>
+    </br>
+    
+      <form action="/custom" method='GET'>
+        <button type="submit" >Make Custom Film</button>
+      </form></br>
       </div>
-
+    
     </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.4/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
