--- a/flask/templates/custom.html
+++ b/flask/templates/custom.html
@@ -64,89 +64,146 @@
 
             <!-- Text input-->
             <h4>Director</h4>
-            <div class="center">
+            
               <div class="center">
               <input id="inputD" name="inputD" type="text" style="display:block; margin : 0 auto;" class="center" required="">
               </div>
-              </div>
+              
             </br>
             
             <h4>Actors</h4>
-            <!-- Text input-->
-            <div class="center">
-            <div class="center">
-            <input id="input1" name="input1" type="text" style="display:block; margin : 0 auto;" class="center" required="">
-              <p>Lead Actor</p>
-            </div>
-            </div>
-        
-            <!-- Text input-->
-            <div class="center" >
-            <div class="center">
-            <input id="input2" name="input2" type="text" style="display:block; margin : 0 auto;" class="center">
-              <p>2nd Actor</p>
-            </div>
-            </div>
-        
-            <!-- Text input-->
-            <div class="center">
-            <div class="center">
-            <input id="input3" name="input3" type="text" style="display:block; margin : 0 auto;" class="center">
-              <p>3rd Actor</p>
-            </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="center">
-              <div class="center">
-              <input id="input4" name="input4" type="text" style="display:block; margin : 0 auto;" class="center">
-                <p>4th Actor</p>
-            </div>
-            </div>
 
-            <!-- Text input-->
-            <div class="center">
-              <div class="center">
-              <input id="input5" name="input5" type="text" style="display:block; margin : 0 auto;" class="center">
-              <p>5th Actor</p>
+            <section>
+            <div class="row">
+              <div class="col-sm-3 col-md-3"></div>
+              <div class="col-sm-3 col-md-3">
+                <div class="right">
+                <input id="input1" name="input1" type="text" style="display:block; margin : 0 auto;align-content: flex-end;" class="center" required="">
+                  <p>Lead Actor</p>
+                </div>
+            
+                <!-- Text input-->
+                <div class="right" >
+                <input id="input2" name="input2" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>2nd Actor</p>
+                </div>
+            
+                <!-- Text input-->
+                <div class="right">
+                <input id="input3" name="input3" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>3rd Actor</p>
+                </div>
+                
+                <!-- Text input-->
+                <div class="right">
+                  <input id="input4" name="input4" type="text" style="display:block; margin : 0 auto;" class="center">
+                    <p>4th Actor</p>
+                </div>
+
+                <!-- Text input-->
+                <div class="right">
+                  <input id="input5" name="input5" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>5th Actor</p>
+                </div>
+              </div>
+              <div class="col-sm-3 col-md-3">
+                <div class="center">
+                <input id="input6" name="input6" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>6th Actor</p>
+                </div>
+            
+                <!-- Text input-->
+                <div class="center" >
+                <input id="input7" name="input7" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>7th Actor</p>
+                </div>
+            
+                <!-- Text input-->
+                <div class="center">
+                <input id="input8" name="input8" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>8th Actor</p>
+                </div>
+                
+                <!-- Text input-->
+                <div class="center">
+                  <input id="input9" name="input9" type="text" style="display:block; margin : 0 auto;" class="center">
+                    <p>9th Actor</p>
+                </div>
+
+                <!-- Text input-->
+                <div class="center">
+                  <input id="input10" name="input10" type="text" style="display:block; margin : 0 auto;" class="center">
+                  <p>10th Actor</p>
+                </div>
+              </div>
+              <div class="col-sm-3 col-md-3"></div>
             </div>
-            </div>
+          </section>
             <h4>Genre</h4>
-            Action: <input type="checkbox" value="action" name="genreCheckbox">
-            &emsp;Adventure: <input type="checkbox" value="adventure" name="genreCheckbox">
-            &emsp;Animation: <input type="checkbox" value="animation" name="genreCheckbox">
-            &emsp;Biography: <input type="checkbox" value="biography" name="genreCheckbox">
-            &emsp;Comedy: <input type="checkbox" value="comedy" name="genreCheckbox">
+            Action: <input type="checkbox" value="Action" name="genreCheckbox">
+            &emsp;Adventure: <input type="checkbox" value="Adventure" name="genreCheckbox">
+            &emsp;Animation: <input type="checkbox" value="Animation" name="genreCheckbox">
+            &emsp;Biography: <input type="checkbox" value="Biography" name="genreCheckbox">
+            &emsp;Comedy: <input type="checkbox" value="Comedy" name="genreCheckbox">
           </br>
-            Crime: <input type="checkbox" value="crime" name="genreCheckbox">
-            &emsp;Drama: <input type="checkbox" value="drama" name="genreCheckbox">
-            &emsp;Documentary: <input type="checkbox" value="documentary" name="genreCheckbox">
-            &emsp;Fantasy: <input type="checkbox" value="fantasy" name="genreCheckbox">
+            Crime: <input type="checkbox" value="Crime" name="genreCheckbox">
+            &emsp;Drama: <input type="checkbox" value="Drama" name="genreCheckbox">
+            &emsp;Documentary: <input type="checkbox" value="Documentary" name="genreCheckbox">
+            &emsp;Fantasy: <input type="checkbox" value="Fantasy" name="genreCheckbox">
         </br>
-            Family: <input type="checkbox" value="family" name="genreCheckbox">
-            &emsp;Horror: <input type="checkbox" value="horror" name="genreCheckbox">
-            &emsp;Musical: <input type="checkbox" value="musical" name="genreCheckbox">
-            &emsp;Mystery: <input type="checkbox" value="mystery" name="genreCheckbox">
+            Family: <input type="checkbox" value="Family" name="genreCheckbox">
+            &emsp;Horror: <input type="checkbox" value="Horror" name="genreCheckbox">
+            &emsp;Musical: <input type="checkbox" value="Musical" name="genreCheckbox">
+            &emsp;Mystery: <input type="checkbox" value="Mystery" name="genreCheckbox">
       </br>
-            Romance: <input type="checkbox" value="romance" name="genreCheckbox">
-            &emsp;Sci-Fi: <input type="checkbox" value="sci-fi" name="genreCheckbox">
-            &emsp;Thriller: <input type="checkbox" value="thriller" name="genreCheckbox">
-            &emsp;War: <input type="checkbox" value="war" name="genreCheckbox">
+            Romance: <input type="checkbox" value="Romance" name="genreCheckbox">
+            &emsp;Sci-Fi: <input type="checkbox" value="Sci-Fi" name="genreCheckbox">
+            &emsp;Thriller: <input type="checkbox" value="Thriller" name="genreCheckbox">
+            &emsp;War: <input type="checkbox" value="War" name="genreCheckbox">
           <br/>
           <h4>Rating</h4>
-          G: <input type="checkbox" value="g" name="ratingCheckbox">
-          &emsp;PG: <input type="checkbox" value="pg" name="ratingCheckbox">
-          &emsp;PG-13: <input type="checkbox" value="pg-13" name="ratingCheckbox">
-          &emsp;R: <input type="checkbox" value="r" name="ratingCheckbox">
-          &emsp;Not-Rated: <input type="checkbox" value="not-rated" name="ratingCheckbox">
+          G: <input type="radio" value="G" name="ratingCheckbox">
+          &emsp;PG: <input type="radio" value="PG" name="ratingCheckbox">
+          &emsp;PG-13: <input type="radio" value="PG-13" name="ratingCheckbox">
+          &emsp;R: <input type="radio" value="R" name="ratingCheckbox">
+          &emsp;Not-Rated: <input type="radio" value="not-rated" name="ratingCheckbox">
 
-            <!-- Button -->
-            <div class="center">
-            <label class="center" for="submit"></label>
-            <div class="center">
-                <button id="submit" name="submit" style="display:block; margin : 0 auto;" type="submit">Predict</button>
-            </div>
-            </div>
+          <br/> 
+          <h4>Budget</h4> 
+          <select name="budget" >
+              {% for budget in budgets %}
+                <option value="{{ budget }}" >{{ budget }}</option>
+              {% endfor %}
+          </select>
+          <br/> 
+          <h4>Release Month</h4> 
+          <select name="month" >
+              {% for month in months %}
+                <option value="{{ month }}" SELECTED>{{ month }}</option>
+              {% endfor %}
+          </select>
+          <br/> 
+          <h4>Production</h4> 
+          <select name="production" >
+              {% for production in productions %}
+                <option value="{{ production }}" SELECTED>{{ production }}</option>
+              {% endfor %}
+          </select>
+          <br/> 
+          <h4>Distribution</h4> 
+          <select name="distribution" >
+              {% for distributor in distributors %}
+                <option value="{{ distributor }}" SELECTED>{{ distributor }}</option>
+              {% endfor %}
+          </select>
+
+          <!-- Button -->
+          <div class="center">
+          <label class="center" for="submit"></label>
+          <div class="center">
+              <button id="submit" name="submit" style="display:block; margin : 0 auto;" type="submit">Predict</button>
+          </div>
+          </div>
         
         </form> 
         </br>
@@ -215,6 +272,56 @@
                 url: '{{ url_for("autocomplete") }}'
                 }).done(function (data){
                     $('#input5').autocomplete({
+                        source: data,
+                        minLength: 2
+                    });
+                });
+            });
+        $(function() {
+            $.ajax({
+                url: '{{ url_for("autocomplete") }}'
+                }).done(function (data){
+                    $('#input6').autocomplete({
+                        source: data,
+                        minLength: 2
+                    });
+                });
+            });
+        $(function() {
+            $.ajax({
+                url: '{{ url_for("autocomplete") }}'
+                }).done(function (data){
+                    $('#input7').autocomplete({
+                        source: data,
+                        minLength: 2
+                    });
+                });
+            });
+        $(function() {
+            $.ajax({
+                url: '{{ url_for("autocomplete") }}'
+                }).done(function (data){
+                    $('#input8').autocomplete({
+                        source: data,
+                        minLength: 2
+                    });
+                });
+            });
+        $(function() {
+            $.ajax({
+                url: '{{ url_for("autocomplete") }}'
+                }).done(function (data){
+                    $('#input9').autocomplete({
+                        source: data,
+                        minLength: 2
+                    });
+                });
+            });
+        $(function() {
+            $.ajax({
+                url: '{{ url_for("autocomplete") }}'
+                }).done(function (data){
+                    $('#input10').autocomplete({
                         source: data,
                         minLength: 2
                     });
